# routism-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
routism_cli/: __init__.py  __main__.py  compose.py  config_env.py  docker_ops.py  doctor.py  engine_models.py  env_ops.py  main.py  ollama_ops.py  probes.py  product.py  support.py  tui.py  util.py
tests/: test_standalone.py
